fix 100vh height on mobile

--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,7 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+.app {
+    height: calc(var(--vh, 1vh) * 100);
+}
